ingress_loadbalancer/cheese-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheese
spec:
  rules:
  - host: stilton.vagrant.vm
    http:
      paths:
      - path: /
        backend:
          service:
            name: stilton
            port:
              name: http
  - host: cheddar.vagrant.vm
    http:
      paths:
      - path: /
        backend:
          service:
            name: cheddar
            port:
              name: http
  - host: wensleydale.vagrant.vm
    http:
      paths:
      - path: /
        backend:
          service:
            name: wensleydale
            port:
              name: http
