ingress_loadbalancer/cheeses-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheeses
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cheeses.vagrant.vm
    http:
      paths:
      - path: /stilton
        backend:
          service:
            name: stilton
            port:
              name: http
      - path: /cheddar
        backend:
          service:
            name: cheddar
            port:
              name: http
      - path: /wensleydale
        backend:
          service:
            name: wensleydale
            port:
              name: http
